CIGALE inputs for Kasia

--- a/dmu28/dmu28_NGP/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_NGP/CIGALE_catalogue_preparation.ipynb
@@ -352,6 +352,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Full catalogue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_catalogue = master_catalogue.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Correction for galactic extinction\n",
+    "best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convertion to CIGALE format\n",
+    "best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True, remove_zerofluxes=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u_bands = [          ]\n",
+    "g_bands = [\"90prime_g\",           \"gpc1_g\"]\n",
+    "r_bands = [\"90prime_r\",           \"gpc1_r\"]\n",
+    "i_bands = [                       \"gpc1_i\"]\n",
+    "z_bands = [\"mosaic_z\", \"decam_z\", \"gpc1_z\"]\n",
+    "y_bands = [                       \"gpc1_y\"]\n",
+    "\n",
+    "def remove_unneeded_fluxes(list_of_bands):\n",
+    "    for band_idx, band in enumerate(list_of_bands[:-1]):\n",
+    "        mask = ~np.isnan(best_catalogue[band])\n",
+    "        for lower_band in list_of_bands[band_idx+1:]:\n",
+    "            best_catalogue[lower_band][mask] = np.nan\n",
+    "            best_catalogue[\"{}_err\".format(lower_band)][mask] = np.nan\n",
+    "            \n",
+    "remove_unneeded_fluxes(g_bands)\n",
+    "remove_unneeded_fluxes(u_bands)\n",
+    "remove_unneeded_fluxes(r_bands)\n",
+    "remove_unneeded_fluxes(i_bands)\n",
+    "remove_unneeded_fluxes(z_bands)\n",
+    "remove_unneeded_fluxes(y_bands)\n",
+    "\n",
+    "best_catalogue.write(\"data_tmp/NGP_cigale_all_extcor_{}.fits\".format(SUFFIX))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Catalogue using spectroscopic redshift"
    ]
   },
@@ -473,6 +539,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python (herschelhelp_internal)",
    "language": "python",
@@ -488,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
