--- a/dmu28/dmu28_SGP/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_SGP/CIGALE_catalogue_preparation.ipynb
@@ -6253,6 +6253,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#best_catalogue.write(\"data_tmp/CDFS-SWIRE_cigale_best_extcor_20180129.fits\")\n",
+    "n_zphot = 0\n",
+    "for tile in file_list:\n",
+    "        \n",
+    "    file_num = tile.split('_')[4].split('.')[0]\n",
+    "    best_catalogue = Table.read(tile)\n",
+    "    \n",
+    "    #Temp solution to problem caused by flag unit = mag:\n",
+    "    for col in best_catalogue.colnames:\n",
+    "        if col.startswith('flag_') and (col not in non_band_flags):\n",
+    "            best_catalogue[col].unit = None\n",
+    "            best_catalogue[col] = best_catalogue[col].astype(bool)\n",
+    "            \n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "    best_catalogue = best_catalogue[~np.isnan(best_catalogue[\"redshift\"])]\n",
+    "    n_zphot += len(best_catalogue)\n",
+    "    \n",
+    "\n",
+    "    print(\"Number of sources with z-spec in file {}: {}\".format(file_num, len(best_catalogue)))\n",
+    "\n",
+    "    # Correction for galactic extinction\n",
+    "    best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)\n",
+    "\n",
+    "    # Convertion to CIGALE format\n",
+    "\n",
+    "    best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True, remove_zerofluxes=True)\n",
+    "\n",
+    "    remove_unneeded_fluxes(g_bands)\n",
+    "    remove_unneeded_fluxes(u_bands)\n",
+    "    remove_unneeded_fluxes(r_bands)\n",
+    "    remove_unneeded_fluxes(i_bands)\n",
+    "    remove_unneeded_fluxes(z_bands)\n",
+    "    remove_unneeded_fluxes(y_bands)\n",
+    "\n",
+    "    #best_catalogue.write(\"data_tmp/tiles/SGP_cigale_optnir_extcor_{}_{}.fits\".format(SUFFIX, file_num), overwrite=True)\n",
+    "    best_catalogue.write(\"data_tmp/tiles/SGP_cigale_all_extcor_{}_{}.fits\".format(SUFFIX, file_num), overwrite=True)\n",
+    "    \n",
+    "print(\"Number of zphot optnir objects: {}\".format(n_zphot))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -6647,6 +6696,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python (herschelhelp_internal)",
    "language": "python",
@@ -6662,7 +6712,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
