--- a/dmu28/dmu28_Herschel-Stripe-82/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_Herschel-Stripe-82/CIGALE_catalogue_preparation.ipynb
@@ -249,6 +249,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for tile in file_list:\n",
+    "        \n",
+    "    file_num = tile.split('_')[4].split('.')[0]\n",
+    "    best_catalogue = Table.read(tile)\n",
+    "    optnir = ((best_catalogue['flag_optnir_det'] == 3) \n",
+    "          | (best_catalogue['flag_optnir_det'] == 7))\n",
+    "    \n",
+    "    #best_catalogue = best_catalogue[optnir]\n",
+    "\n",
+    "\n",
+    "    best_catalogue = best_catalogue[~np.isnan(best_catalogue[\"redshift\"])]\n",
+    "\n",
+    "    print(\"Number of sources with z-spec in file {}: {}\".format(file_num, len(best_catalogue)))\n",
+    "\n",
+    "    # Correction for galactic extinction\n",
+    "    best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)\n",
+    "\n",
+    "    # Convertion to CIGALE format\n",
+    "\n",
+    "    best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True, remove_zerofluxes=True)\n",
+    "\n",
+    "    remove_unneeded_fluxes(g_bands)\n",
+    "    remove_unneeded_fluxes(u_bands)\n",
+    "    remove_unneeded_fluxes(r_bands)\n",
+    "    remove_unneeded_fluxes(i_bands)\n",
+    "    remove_unneeded_fluxes(z_bands)\n",
+    "    remove_unneeded_fluxes(y_bands)\n",
+    "    remove_unneeded_fluxes(j_bands)\n",
+    "    remove_unneeded_fluxes(h_bands)\n",
+    "    remove_unneeded_fluxes(k_bands)\n",
+    "\n",
+    "    best_catalogue.write(\"data_tmp/tiles/herschel-stripe-82_cigale_all_extcor_{}_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8677,6 +8717,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python (herschelhelp_internal)",
    "language": "python",
@@ -8692,7 +8733,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
