--- a/dmu28/dmu28_NGP/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_NGP/CIGALE_catalogue_preparation.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "SUFFIX = '20180219'\n",
-    "master_catalogue = Table.read(\"../../dmu32/dmu32_NGP/data/NGP_{}_cigale.fits\".format(SUFFIX))"
+    "master_catalogue = Table.read(\"../../dmu32/dmu32_NGP/data/HATLAS-NGP_{}_cigale.fits\".format(SUFFIX))"
    ]
   },
   {
@@ -232,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/NGP_cigale_best_extcor_{}.fits\".format(SUFFIX))"
+    "best_catalogue.write(\"data_tmp/NGP_cigale_best_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
@@ -345,7 +345,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/NGP_cigale_optnir_extcor_{}.fits\".format(SUFFIX))"
+    "best_catalogue.write(\"data_tmp/NGP_cigale_optnir_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,9 +376,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:herschelhelp.external:For 28 sources, the band 90prime_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 28 sources, the band gpc1_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 9 sources, the band gpc1_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 8 sources, the band 90prime_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 1 sources, the band gpc1_i should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n"
+     ]
+    }
+   ],
    "source": [
     "# Convertion to CIGALE format\n",
     "best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True, remove_zerofluxes=True)"
@@ -386,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +423,7 @@
     "remove_unneeded_fluxes(z_bands)\n",
     "remove_unneeded_fluxes(y_bands)\n",
     "\n",
-    "best_catalogue.write(\"data_tmp/NGP_cigale_all_extcor_{}.fits\".format(SUFFIX))"
+    "best_catalogue.write(\"data_tmp/NGP_cigale_all_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
@@ -423,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -434,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -446,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -457,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -476,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -488,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -512,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -528,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -555,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
