--- a/dmu28/dmu28_Herschel-Stripe-82/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_Herschel-Stripe-82/CIGALE_catalogue_preparation.ipynb
@@ -62,12 +62,16 @@
    },
    "outputs": [],
    "source": [
-    "# good = {}\n",
-    "# for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
-    "#     good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
-    "#                                    ~master_catalogue['flag_{}'.format(band)])\n",
-    "#     good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
-    "#                               master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
+    "def main_help_sample(master_catalogue):\n",
+    "    good = {}\n",
+    "    for band in [ 'spire_250', 'spire_350', 'spire_500']:\n",
+    "        good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
+    "                                       ~master_catalogue['flag_{}'.format(band)])\n",
+    "        good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
+    "                                  master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)\n",
+    "    combined_good = np.sum(list(good.values()), axis=0) >= 2\n",
+    "    print(\"Number of good sources: {}\".format(np.sum(combined_good)))\n",
+    "    return master_catalogue[combined_good].copy()"
    ]
   },
   {
@@ -191,6 +195,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Best"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
@@ -198,12 +209,45 @@
    },
    "outputs": [],
    "source": [
-    "# remove_unneeded_fluxes(g_bands)\n",
-    "# remove_unneeded_fluxes(u_bands)\n",
-    "# remove_unneeded_fluxes(r_bands)\n",
-    "# remove_unneeded_fluxes(i_bands)\n",
-    "# remove_unneeded_fluxes(z_bands)\n",
-    "# remove_unneeded_fluxes(y_bands)"
+    "for tile in file_list:\n",
+    "        \n",
+    "    file_num = tile.split('_')[4].split('.')[0]\n",
+    "    best_catalogue = Table.read(tile)\n",
+    "    optnir = ((best_catalogue['flag_optnir_det'] == 3) \n",
+    "          | (best_catalogue['flag_optnir_det'] == 7))\n",
+    "    \n",
+    "    best_catalogue = main_help_sample(best_catalogue)\n",
+    "\n",
+    "\n",
+    "    best_catalogue = best_catalogue[~np.isnan(best_catalogue[\"redshift\"])]\n",
+    "\n",
+    "    print(\"Number of sources with z-spec in file {}: {}\".format(file_num, len(best_catalogue)))\n",
+    "\n",
+    "    # Correction for galactic extinction\n",
+    "    best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)\n",
+    "\n",
+    "    # Convertion to CIGALE format\n",
+    "\n",
+    "    best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True, remove_zerofluxes=True)\n",
+    "\n",
+    "    remove_unneeded_fluxes(g_bands)\n",
+    "    remove_unneeded_fluxes(u_bands)\n",
+    "    remove_unneeded_fluxes(r_bands)\n",
+    "    remove_unneeded_fluxes(i_bands)\n",
+    "    remove_unneeded_fluxes(z_bands)\n",
+    "    remove_unneeded_fluxes(y_bands)\n",
+    "    remove_unneeded_fluxes(j_bands)\n",
+    "    remove_unneeded_fluxes(h_bands)\n",
+    "    remove_unneeded_fluxes(k_bands)\n",
+    "\n",
+    "    best_catalogue.write(\"data_tmp/tiles/herschel-stripe-82_cigale_best_extcor_{}_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optnir"
    ]
   },
   {
@@ -12345,6 +12389,13 @@
     "    remove_unneeded_fluxes(k_bands)\n",
     "\n",
     "    best_catalogue.write(\"data_tmp/tiles/herschel-stripe-82_cigale_optnir_extcor_{}_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### All"
    ]
   },
   {
@@ -33448,7 +33499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
