HS82 final stage ready

--- a/dmu32/dmu32_Herschel-Stripe-82/Herschel-Stripe-82_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Herschel-Stripe-82/Herschel-Stripe-82_catalogue_merging.ipynb
@@ -261,6 +261,8 @@
     "            out_table[col].fill_value = np.nan\n",
     "        elif out_table[col].dtype == '>f8':\n",
     "            out_table[col].fill_value = np.nan\n",
+    "        elif out_table[col].dtype == '>f4':\n",
+    "            out_table[col].fill_value = np.nan\n",
     "        elif out_table[col].dtype == '|S27':\n",
     "            out_table[col].fill_value = ''\n",
     "        elif out_table[col].dtype == '|S18':\n",
