NGP ready to produce CIGALE input with PACS

--- a/dmu32/dmu32_NGP/NGP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_NGP/NGP_catalogue_merging.ipynb
@@ -22,7 +22,7 @@
     "# Set this to true to produce only the catalogue for CIGALE and to false \n",
     "# to continue and merge the CIGALE results too.\n",
     "MAKE_CIGALE_INPUT = True\n",
-    "MAKE_FINAL = True"
+    "MAKE_FINAL = False"
    ]
   },
   {
@@ -102,38 +102,38 @@
    },
    "outputs": [],
    "source": [
-    "# # XID+ PACS\n",
+    "# XID+ PACS\n",
     "\n",
-    "# xid_pacs = Table.read(\"../../dmu26/dmu26_XID+PACS_CDFS-SWIRE/data/\"\n",
-    "#                         \"dmu26_XID+PACS_CDFS-SWIRE_cat_20171019.fits\")\n",
-    "# xid_pacs.meta = None\n",
+    "xid_pacs = Table.read(\"../../dmu26/dmu26_XID+PACS_CDFS-SWIRE/data/\"\n",
+    "                        \"dmu26_XID+PACS_CDFS-SWIRE_cat_20171019.fits\")\n",
+    "xid_pacs.meta = None\n",
     "\n",
-    "# # Convert from mJy to μJy\n",
-    "# for col in [\"F_PACS_100\", \"FErr_PACS_100_u\", \"FErr_PACS_100_l\",\n",
-    "#             \"F_PACS_160\", \"FErr_PACS_160_u\", \"FErr_PACS_160_l\"]:\n",
-    "#     xid_pacs[col] *= 1000\n",
+    "# Convert from mJy to μJy\n",
+    "for col in [\"F_PACS_100\", \"FErr_PACS_100_u\", \"FErr_PACS_100_l\",\n",
+    "            \"F_PACS_160\", \"FErr_PACS_160_u\", \"FErr_PACS_160_l\"]:\n",
+    "    xid_pacs[col] *= 1000\n",
     "\n",
-    "# xid_pacs.add_column(Column(\n",
-    "#     data=np.max([xid_pacs['FErr_PACS_100_u'] - xid_pacs['F_PACS_100'],\n",
-    "#                  xid_pacs['F_PACS_100'] - xid_pacs['FErr_PACS_100_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_pacs_green\"\n",
-    "# ))\n",
-    "# xid_pacs['F_PACS_100'].name = \"f_pacs_green\"\n",
-    "# xid_pacs['flag_PACS_100'].name = \"flag_pacs_green\"\n",
+    "xid_pacs.add_column(Column(\n",
+    "    data=np.max([xid_pacs['FErr_PACS_100_u'] - xid_pacs['F_PACS_100'],\n",
+    "                 xid_pacs['F_PACS_100'] - xid_pacs['FErr_PACS_100_l']],\n",
+    "                axis=0),\n",
+    "    name=\"ferr_pacs_green\"\n",
+    "))\n",
+    "xid_pacs['F_PACS_100'].name = \"f_pacs_green\"\n",
+    "xid_pacs['flag_PACS_100'].name = \"flag_pacs_green\"\n",
     "\n",
-    "# xid_pacs.add_column(Column(\n",
-    "#     data=np.max([xid_pacs['FErr_PACS_160_u'] - xid_pacs['F_PACS_160'],\n",
-    "#                  xid_pacs['F_PACS_160'] - xid_pacs['FErr_PACS_160_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_pacs_red\"\n",
-    "# ))\n",
-    "# xid_pacs['F_PACS_160'].name = \"f_pacs_red\"\n",
-    "# xid_pacs['flag_PACS_160'].name = \"flag_pacs_red\"\n",
+    "xid_pacs.add_column(Column(\n",
+    "    data=np.max([xid_pacs['FErr_PACS_160_u'] - xid_pacs['F_PACS_160'],\n",
+    "                xid_pacs['F_PACS_160'] - xid_pacs['FErr_PACS_160_l']],\n",
+    "                axis=0),\n",
+    "    name=\"ferr_pacs_red\"\n",
+    "))\n",
+    "xid_pacs['F_PACS_160'].name = \"f_pacs_red\"\n",
+    "xid_pacs['flag_PACS_160'].name = \"flag_pacs_red\"\n",
     "\n",
-    "# xid_pacs = xid_pacs['help_id', 'f_pacs_green', 'ferr_pacs_green',\n",
-    "#                     'flag_pacs_green', 'f_pacs_red', 'ferr_pacs_red',\n",
-    "#                     'flag_pacs_red']\n"
+    "xid_pacs = xid_pacs['help_id', 'f_pacs_green', 'ferr_pacs_green',\n",
+    "                    'flag_pacs_green', 'f_pacs_red', 'ferr_pacs_red',\n",
+    "                    'flag_pacs_red']\n"
    ]
   },
   {
@@ -272,15 +272,15 @@
    },
    "outputs": [],
    "source": [
-    "# merged_table = join(merged_table, xid_pacs, join_type='left')\n",
+    "merged_table = join(ml, xid_pacs, join_type='left')\n",
     "        \n",
-    "# # Fill values\n",
-    "# for col in xid_pacs.colnames:\n",
-    "#     if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
-    "#         merged_table[col].fill_value = np.nan\n",
-    "#     elif col.startswith(\"flag_\"):\n",
-    "#         merged_table[col].fill_value = False\n",
-    "# merged_table = merged_table.filled()"
+    "# Fill values\n",
+    "for col in xid_pacs.colnames:\n",
+    "    if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
+    "        merged_table[col].fill_value = np.nan\n",
+    "    elif col.startswith(\"flag_\"):\n",
+    "        merged_table[col].fill_value = False\n",
+    "merged_table = merged_table.filled()"
    ]
   },
   {
@@ -291,7 +291,7 @@
    },
    "outputs": [],
    "source": [
-    "merged_table = join(ml, xid_spire, join_type='left')\n",
+    "merged_table = join(merged_table, xid_spire, join_type='left')\n",
     "        \n",
     "# Fill values\n",
     "for col in xid_spire.colnames:\n",
@@ -350,9 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -606,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
