--- a/dmu28/dmu28_NGP/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_NGP/CIGALE_catalogue_preparation.ipynb
@@ -80,7 +80,7 @@
    "outputs": [],
    "source": [
     "good = {}\n",
-    "for band in [ 'spire_250', 'spire_350', 'spire_500']:\n",
+    "for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
     "    good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
     "                                   ~master_catalogue['flag_{}'.format(band)])\n",
     "    good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
@@ -567,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
