Incorporate Maria edge flag to remove objects outside map

--- a/dmu32/dmu32_NGP/NGP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_NGP/NGP_catalogue_merging.ipynb
@@ -27,10 +27,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -96,17 +94,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34218 flagged as edge and 1198418 flagged not\n",
+      "There are 415 good pacs green fluxes and 623 good pacs_red\n"
+     ]
+    }
+   ],
    "source": [
     "# XID+ PACS\n",
     "\n",
-    "xid_pacs = Table.read(\"../../dmu26/dmu26_XID+PACS_CDFS-SWIRE/data/\"\n",
-    "                        \"dmu26_XID+PACS_CDFS-SWIRE_cat_20171019.fits\")\n",
+    "xid_pacs = Table.read(\"../../dmu26/dmu26_XID+PACS_NGP/data/\"\n",
+    "                        \"dmu26_XID+PACS_NGP_cat_20200715.fits\")\n",
     "xid_pacs.meta = None\n",
+    "\n",
+    "print(\"{} flagged as edge and {} flagged not\".format(\n",
+    "    np.sum(xid_pacs['Flag_edges']),np.sum(~xid_pacs['Flag_edges']) ))\n",
+    "xid_pacs = xid_pacs[~xid_pacs['Flag_edges']]\n",
     "\n",
     "# Convert from mJy to μJy\n",
     "for col in [\"F_PACS_100\", \"FErr_PACS_100_u\", \"FErr_PACS_100_l\",\n",
@@ -131,9 +140,15 @@
     "xid_pacs['F_PACS_160'].name = \"f_pacs_red\"\n",
     "xid_pacs['flag_PACS_160'].name = \"flag_pacs_red\"\n",
     "\n",
+    "\n",
+    "\n",
     "xid_pacs = xid_pacs['help_id', 'f_pacs_green', 'ferr_pacs_green',\n",
     "                    'flag_pacs_green', 'f_pacs_red', 'ferr_pacs_red',\n",
-    "                    'flag_pacs_red']\n"
+    "                    'flag_pacs_red']\n",
+    "\n",
+    "print('There are {} good pacs green fluxes and {} good pacs_red'.format(\n",
+    "    len(xid_pacs) - np.sum(xid_pacs['flag_pacs_green']), \n",
+    "    len(xid_pacs) - np.sum(xid_pacs['flag_pacs_red'])))"
    ]
   },
   {
