--- a/dmu32/dmu32_NGP/NGP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_NGP/NGP_catalogue_merging.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,8 @@
      "output_type": "stream",
      "text": [
       "34218 flagged as edge and 1198418 flagged not\n",
-      "There are 415 good pacs green fluxes and 623 good pacs_red\n"
+      "There are 415 good pacs green fluxes and 623 good pacs_red\n",
+      "There are 106588 objects with pacs_green s/n > 2 and 170670 with pacs_red s/n > 2\n"
      ]
     }
    ],
@@ -146,9 +147,13 @@
     "                    'flag_pacs_green', 'f_pacs_red', 'ferr_pacs_red',\n",
     "                    'flag_pacs_red']\n",
     "\n",
-    "print('There are {} good pacs green fluxes and {} good pacs_red'.format(\n",
+    "print('There are {} unflagged pacs green fluxes and {} unflagged pacs_red'.format(\n",
     "    len(xid_pacs) - np.sum(xid_pacs['flag_pacs_green']), \n",
-    "    len(xid_pacs) - np.sum(xid_pacs['flag_pacs_red'])))"
+    "    len(xid_pacs) - np.sum(xid_pacs['flag_pacs_red'])))\n",
+    "print('There are {} objects with pacs_green s/n > 2 and {} with pacs_red s/n > 2'.format(\n",
+    "    np.sum(xid_pacs['f_pacs_green']/ xid_pacs['ferr_pacs_green']> 2),\n",
+    "    np.sum(xid_pacs['f_pacs_red']/ xid_pacs['ferr_pacs_red']> 2)\n",
+    "))"
    ]
   },
   {
