CIGALE ready on NGP with flagged objects removed

--- a/dmu32/dmu32_NGP/NGP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_NGP/NGP_catalogue_merging.ipynb
@@ -102,7 +102,7 @@
      "output_type": "stream",
      "text": [
       "34218 flagged as edge and 1198418 flagged not\n",
-      "There are 415 good pacs green fluxes and 623 good pacs_red\n",
+      "There are 415 unflagged pacs green fluxes and 623 unflagged pacs_red\n",
       "There are 106588 objects with pacs_green s/n > 2 and 170670 with pacs_red s/n > 2\n"
      ]
     }
@@ -588,18 +588,7 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Column cigale_chi2_opt has missing data\n",
-      "Column cigale_chi2_ir has missing data\n",
-      "Column cigale_chi2_red has missing data\n",
-      "Column cigale_chi2_ironly has missing data\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if MAKE_FINAL:\n",
     "\n",
@@ -624,7 +613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
