NGP complete with pacs

--- a/dmu32/dmu32_NGP/NGP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_NGP/NGP_catalogue_merging.ipynb
@@ -22,7 +22,7 @@
     "# Set this to true to produce only the catalogue for CIGALE and to false \n",
     "# to continue and merge the CIGALE results too.\n",
     "MAKE_CIGALE_INPUT = True\n",
-    "MAKE_FINAL = False"
+    "MAKE_FINAL = True"
    ]
   },
   {
@@ -588,7 +588,18 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column cigale_chi2_opt has missing data\n",
+      "Column cigale_chi2_ir has missing data\n",
+      "Column cigale_chi2_red has missing data\n",
+      "Column cigale_chi2_ironly has missing data\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_FINAL:\n",
     "\n",
