Rerun Bootes with lbc_u"

--- a/dmu28/dmu28_Bootes/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_Bootes/CIGALE_catalogue_preparation.ipynb
@@ -232,7 +232,7 @@
    },
    "outputs": [],
    "source": [
-    "u_bands = []\n",
+    "u_bands = [\"lbc_u\"]\n",
     "g_bands = [            \"90prime_g\", \"gpc1_g\"]\n",
     "r_bands = [\"mosaic_r\", \"90prime_r\", \"gpc1_r\"]\n",
     "i_bands = [\"mosaic_i\",              \"gpc1_i\"]\n",
@@ -553,7 +553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
