Investigating faulty Bootes photo-z

--- a/dmu24/dmu24_Bootes/1_Cross_in_help_ids.ipynb
+++ b/dmu24/dmu24_Bootes/1_Cross_in_help_ids.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Bootes Brown photo-z cross\n",
     "\n",
-    "The photometric redshifts are calculated for the Brown aperture matched catalogue. Since in the manufacture of the masterlist we take the Brown aperture matched catalogue and add in some other obejcts. We here asign the Brown objects with their help id"
+    "The photometric redshifts are calculated for the Brown aperture matched catalogue. Since in the manufacture of the masterlist we take the Brown aperture matched catalogue and add in some other obejcts. We here asign the Brown objects with their help id.\n",
+    "\n",
+    "NOTE: There is some confusion as to whether the naming of the ID columns which may have caused misassociations. This is currently under investigation and the photo-z may be superseeded."
    ]
   },
   {
@@ -42,30 +44,24 @@
     "    'help_id', \n",
     "    'brown_i_id'\n",
     "]\n",
-    "cross_ids['brown_i_id'].name = 'ID'\n",
+    "#cross_ids['brown_i_id'].name = 'ID'\n",
     "\n",
     "\n",
-    "photo_z['ID'].fill_value = -99\n",
-    "photo_z = photo_z.filled()"
+    "photo_z['ID_OPTICAL'].fill_value = -99\n",
+    "\n",
+    "photo_z = photo_z.filled()\n",
+    "photo_z['brown_i_id'] = photo_z['ID_OPTICAL']  #?????\n",
+    "photo_z['brown_irac_id'] = photo_z['ID']       #????\n",
+    "photo_z = photo_z[photo_z['brown_i_id'] > -1]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: MergeConflictWarning: Cannot merge meta key 'EXTNAME' types <class 'str'> and <class 'str'>, choosing EXTNAME='master_list_cross_ident_bootes_20190701.fits' [astropy.utils.metadata]\n",
-      "WARNING: MergeConflictWarning: Cannot merge meta key 'DATE-HDU' types <class 'str'> and <class 'str'>, choosing DATE-HDU='2019-07-08T09:28:51' [astropy.utils.metadata]\n",
-      "WARNING: MergeConflictWarning: Cannot merge meta key 'STILVERS' types <class 'str'> and <class 'str'>, choosing STILVERS='3.2-2' [astropy.utils.metadata]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "new_cat = join(photo_z, cross_ids, join_type='left')"
+    "new_cat = join(photo_z, cross_ids, join_type='left', keys='brown_i_id')"
    ]
   },
   {
@@ -111,7 +107,7 @@
     {
      "data": {
       "text/plain": [
-       "556961"
+       "409543"
       ]
      },
      "execution_count": 6,
@@ -131,7 +127,7 @@
     {
      "data": {
       "text/plain": [
-       "2214845"
+       "2067406"
       ]
      },
      "execution_count": 7,
@@ -160,7 +156,7 @@
     {
      "data": {
       "text/plain": [
-       "1657884"
+       "1657863"
       ]
      },
      "execution_count": 9,
@@ -220,62 +216,62 @@
     {
      "data": {
       "text/html": [
-       "&lt;Column name=&apos;help_id&apos; dtype=&apos;bytes27&apos; length=414&gt;\n",
+       "&lt;Column name=&apos;help_id&apos; dtype=&apos;bytes27&apos; length=393&gt;\n",
        "<table>\n",
-       "<tr><td>HELP_J142437.818+334207.903</td></tr>\n",
-       "<tr><td>HELP_J142439.779+341546.007</td></tr>\n",
-       "<tr><td>HELP_J142441.422+334445.487</td></tr>\n",
-       "<tr><td>HELP_J142442.081+322823.807</td></tr>\n",
-       "<tr><td>HELP_J142451.435+351158.274</td></tr>\n",
-       "<tr><td>HELP_J142452.724+344704.613</td></tr>\n",
-       "<tr><td>HELP_J142454.282+341933.772</td></tr>\n",
-       "<tr><td>HELP_J142458.833+341759.494</td></tr>\n",
-       "<tr><td>HELP_J142459.227+330212.781</td></tr>\n",
-       "<tr><td>HELP_J142500.137+333627.582</td></tr>\n",
-       "<tr><td>HELP_J142500.994+341654.105</td></tr>\n",
-       "<tr><td>HELP_J142501.405+345539.632</td></tr>\n",
+       "<tr><td>HELP_J142441.064+324758.688</td></tr>\n",
+       "<tr><td>HELP_J142441.765+322945.003</td></tr>\n",
+       "<tr><td>HELP_J142442.496+341145.082</td></tr>\n",
+       "<tr><td>HELP_J142443.618+350953.238</td></tr>\n",
+       "<tr><td>HELP_J142444.094+325217.503</td></tr>\n",
+       "<tr><td>HELP_J142446.166+343900.439</td></tr>\n",
+       "<tr><td>HELP_J142448.115+323206.565</td></tr>\n",
+       "<tr><td>HELP_J142451.431+340142.522</td></tr>\n",
+       "<tr><td>HELP_J142452.228+341546.019</td></tr>\n",
+       "<tr><td>HELP_J142454.562+324752.167</td></tr>\n",
+       "<tr><td>HELP_J142455.314+322844.779</td></tr>\n",
+       "<tr><td>HELP_J142459.819+330341.068</td></tr>\n",
        "<tr><td>...</td></tr>\n",
-       "<tr><td>HELP_J143810.214+344207.844</td></tr>\n",
-       "<tr><td>HELP_J143813.854+335004.234</td></tr>\n",
-       "<tr><td>HELP_J143815.391+351417.437</td></tr>\n",
-       "<tr><td>HELP_J143820.081+340007.888</td></tr>\n",
-       "<tr><td>HELP_J143820.578+345428.284</td></tr>\n",
-       "<tr><td>HELP_J143820.647+343914.009</td></tr>\n",
-       "<tr><td>HELP_J143835.865+345302.179</td></tr>\n",
-       "<tr><td>HELP_J143839.148+343338.859</td></tr>\n",
-       "<tr><td>HELP_J143839.153+342306.249</td></tr>\n",
-       "<tr><td>HELP_J143842.636+350220.263</td></tr>\n",
-       "<tr><td>HELP_J143845.209+351724.989</td></tr>\n",
-       "<tr><td>HELP_J143845.664+351103.565</td></tr>\n",
+       "<tr><td>HELP_J143807.060+343338.860</td></tr>\n",
+       "<tr><td>HELP_J143810.889+345039.174</td></tr>\n",
+       "<tr><td>HELP_J143811.927+342346.117</td></tr>\n",
+       "<tr><td>HELP_J143812.495+335234.422</td></tr>\n",
+       "<tr><td>HELP_J143816.326+341329.510</td></tr>\n",
+       "<tr><td>HELP_J143826.653+333705.470</td></tr>\n",
+       "<tr><td>HELP_J143827.106+341127.592</td></tr>\n",
+       "<tr><td>HELP_J143834.406+334542.856</td></tr>\n",
+       "<tr><td>HELP_J143835.708+344502.136</td></tr>\n",
+       "<tr><td>HELP_J143837.709+341338.840</td></tr>\n",
+       "<tr><td>HELP_J143838.366+333926.769</td></tr>\n",
+       "<tr><td>HELP_J143841.165+335004.237</td></tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "<Column name='help_id' dtype='bytes27' length=414>\n",
-       "HELP_J142437.818+334207.903\n",
-       "HELP_J142439.779+341546.007\n",
-       "HELP_J142441.422+334445.487\n",
-       "HELP_J142442.081+322823.807\n",
-       "HELP_J142451.435+351158.274\n",
-       "HELP_J142452.724+344704.613\n",
-       "HELP_J142454.282+341933.772\n",
-       "HELP_J142458.833+341759.494\n",
-       "HELP_J142459.227+330212.781\n",
-       "HELP_J142500.137+333627.582\n",
-       "HELP_J142500.994+341654.105\n",
-       "HELP_J142501.405+345539.632\n",
+       "<Column name='help_id' dtype='bytes27' length=393>\n",
+       "HELP_J142441.064+324758.688\n",
+       "HELP_J142441.765+322945.003\n",
+       "HELP_J142442.496+341145.082\n",
+       "HELP_J142443.618+350953.238\n",
+       "HELP_J142444.094+325217.503\n",
+       "HELP_J142446.166+343900.439\n",
+       "HELP_J142448.115+323206.565\n",
+       "HELP_J142451.431+340142.522\n",
+       "HELP_J142452.228+341546.019\n",
+       "HELP_J142454.562+324752.167\n",
+       "HELP_J142455.314+322844.779\n",
+       "HELP_J142459.819+330341.068\n",
        "                        ...\n",
-       "HELP_J143810.214+344207.844\n",
-       "HELP_J143813.854+335004.234\n",
-       "HELP_J143815.391+351417.437\n",
-       "HELP_J143820.081+340007.888\n",
-       "HELP_J143820.578+345428.284\n",
-       "HELP_J143820.647+343914.009\n",
-       "HELP_J143835.865+345302.179\n",
-       "HELP_J143839.148+343338.859\n",
-       "HELP_J143839.153+342306.249\n",
-       "HELP_J143842.636+350220.263\n",
-       "HELP_J143845.209+351724.989\n",
-       "HELP_J143845.664+351103.565"
+       "HELP_J143807.060+343338.860\n",
+       "HELP_J143810.889+345039.174\n",
+       "HELP_J143811.927+342346.117\n",
+       "HELP_J143812.495+335234.422\n",
+       "HELP_J143816.326+341329.510\n",
+       "HELP_J143826.653+333705.470\n",
+       "HELP_J143827.106+341127.592\n",
+       "HELP_J143834.406+334542.856\n",
+       "HELP_J143835.708+344502.136\n",
+       "HELP_J143837.709+341338.840\n",
+       "HELP_J143838.366+333926.769\n",
+       "HELP_J143841.165+335004.237"
       ]
      },
      "execution_count": 12,
@@ -290,36 +286,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<i>Table length=2</i>\n",
-       "<table id=\"table4558528184\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>ID</th><th>ID_OPTICAL</th><th>z1_median</th><th>help_id</th></tr></thead>\n",
-       "<thead><tr><th>int64</th><th>int64</th><th>float64</th><th>bytes27</th></tr></thead>\n",
-       "<tr><td>691549</td><td>691550</td><td>0.3343</td><td>HELP_J142437.818+334207.903</td></tr>\n",
-       "<tr><td>691549</td><td>691550</td><td>0.3343</td><td>HELP_J142437.818+334207.903</td></tr>\n",
+       "<i>Table length=1</i>\n",
+       "<table id=\"table4709573072\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>ID</th><th>ID_OPTICAL</th><th>z1_median</th><th>brown_i_id</th><th>brown_irac_id</th><th>help_id</th></tr></thead>\n",
+       "<thead><tr><th>int64</th><th>int64</th><th>float64</th><th>int64</th><th>int64</th><th>bytes27</th></tr></thead>\n",
+       "<tr><td>778163</td><td>778164</td><td>1.0382</td><td>778164</td><td>778163</td><td>HELP_J143841.165+335004.237</td></tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "<Table length=2>\n",
-       "  ID   ID_OPTICAL z1_median           help_id          \n",
-       "int64    int64     float64            bytes27          \n",
-       "------ ---------- --------- ---------------------------\n",
-       "691549     691550    0.3343 HELP_J142437.818+334207.903\n",
-       "691549     691550    0.3343 HELP_J142437.818+334207.903"
+       "<Table length=1>\n",
+       "  ID   ID_OPTICAL z1_median brown_i_id brown_irac_id           help_id          \n",
+       "int64    int64     float64    int64        int64               bytes27          \n",
+       "------ ---------- --------- ---------- ------------- ---------------------------\n",
+       "778163     778164    1.0382     778164        778163 HELP_J143841.165+335004.237"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_cat[new_cat['help_id']=='HELP_J142437.818+334207.903']"
+    "new_cat[new_cat['help_id']=='HELP_J143841.165+335004.237']"
    ]
   },
   {
@@ -335,34 +329,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<i>Table length=1</i>\n",
-       "<table id=\"table4559061232\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>ID</th><th>ID_OPTICAL</th><th>z1_median</th><th>help_id</th></tr></thead>\n",
-       "<thead><tr><th>int64</th><th>int64</th><th>float64</th><th>bytes27</th></tr></thead>\n",
-       "<tr><td>691549</td><td>691550</td><td>0.3343</td><td>HELP_J142437.818+334207.903</td></tr>\n",
+       "<table id=\"table4833439696\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>ID</th><th>ID_OPTICAL</th><th>z1_median</th><th>brown_i_id</th><th>brown_irac_id</th><th>help_id</th></tr></thead>\n",
+       "<thead><tr><th>int64</th><th>int64</th><th>float64</th><th>int64</th><th>int64</th><th>bytes27</th></tr></thead>\n",
+       "<tr><td>778163</td><td>778164</td><td>1.0382</td><td>778164</td><td>778163</td><td>HELP_J143841.165+335004.237</td></tr>\n",
        "</table>"
       ],
       "text/plain": [
        "<Table length=1>\n",
-       "  ID   ID_OPTICAL z1_median           help_id          \n",
-       "int64    int64     float64            bytes27          \n",
-       "------ ---------- --------- ---------------------------\n",
-       "691549     691550    0.3343 HELP_J142437.818+334207.903"
+       "  ID   ID_OPTICAL z1_median brown_i_id brown_irac_id           help_id          \n",
+       "int64    int64     float64    int64        int64               bytes27          \n",
+       "------ ---------- --------- ---------- ------------- ---------------------------\n",
+       "778163     778164    1.0382     778164        778163 HELP_J143841.165+335004.237"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_cat[new_cat['help_id']=='HELP_J142437.818+334207.903']"
+    "new_cat[new_cat['help_id']=='HELP_J143841.165+335004.237']"
    ]
   },
   {
@@ -414,18 +408,18 @@
      "data": {
       "text/html": [
        "<i>Table length=10</i>\n",
-       "<table id=\"table4559118288-425323\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>idx</th><th>ID</th><th>ID_OPTICAL</th><th>z1_median</th><th>help_id</th></tr></thead>\n",
-       "<tr><td>0</td><td>1788580</td><td>1788581</td><td>0.7797</td><td>HELP_J142433.597+352308.103</td></tr>\n",
-       "<tr><td>1</td><td>1891099</td><td>1891100</td><td>2.5117</td><td>HELP_J142433.602+353326.121</td></tr>\n",
-       "<tr><td>2</td><td>1997888</td><td>1997889</td><td>0.2227</td><td>HELP_J142433.609+354416.174</td></tr>\n",
-       "<tr><td>3</td><td>1776606</td><td>1776607</td><td>0.8996</td><td>HELP_J142433.611+352156.195</td></tr>\n",
-       "<tr><td>4</td><td>1780409</td><td>1780410</td><td>0.8052</td><td>HELP_J142433.614+352219.215</td></tr>\n",
-       "<tr><td>5</td><td>2003639</td><td>2003640</td><td>0.1278</td><td>HELP_J142433.614+354452.719</td></tr>\n",
-       "<tr><td>6</td><td>1729999</td><td>1730000</td><td>0.3376</td><td>HELP_J142433.625+351736.189</td></tr>\n",
-       "<tr><td>7</td><td>1888110</td><td>1888111</td><td>0.5268</td><td>HELP_J142433.629+353308.009</td></tr>\n",
-       "<tr><td>8</td><td>2000812</td><td>2000813</td><td>0.1662</td><td>HELP_J142433.635+354435.055</td></tr>\n",
-       "<tr><td>9</td><td>2029549</td><td>2029550</td><td>1.9393</td><td>HELP_J142433.641+354736.024</td></tr>\n",
+       "<table id=\"table4833520216-86896\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>idx</th><th>ID</th><th>ID_OPTICAL</th><th>z1_median</th><th>brown_i_id</th><th>brown_irac_id</th><th>help_id</th></tr></thead>\n",
+       "<tr><td>0</td><td>1788579</td><td>1788580</td><td>0.9797</td><td>1788580</td><td>1788579</td><td>HELP_J142433.597+352308.103</td></tr>\n",
+       "<tr><td>1</td><td>1891098</td><td>1891099</td><td>0.8861</td><td>1891099</td><td>1891098</td><td>HELP_J142433.602+353326.121</td></tr>\n",
+       "<tr><td>2</td><td>1997887</td><td>1997888</td><td>0.7447</td><td>1997888</td><td>1997887</td><td>HELP_J142433.609+354416.174</td></tr>\n",
+       "<tr><td>3</td><td>1776605</td><td>1776606</td><td>1.8403</td><td>1776606</td><td>1776605</td><td>HELP_J142433.611+352156.195</td></tr>\n",
+       "<tr><td>4</td><td>1780408</td><td>1780409</td><td>0.3033</td><td>1780409</td><td>1780408</td><td>HELP_J142433.614+352219.215</td></tr>\n",
+       "<tr><td>5</td><td>2003638</td><td>2003639</td><td>1.7235</td><td>2003639</td><td>2003638</td><td>HELP_J142433.614+354452.719</td></tr>\n",
+       "<tr><td>6</td><td>1729998</td><td>1729999</td><td>0.3968</td><td>1729999</td><td>1729998</td><td>HELP_J142433.625+351736.189</td></tr>\n",
+       "<tr><td>7</td><td>1888109</td><td>1888110</td><td>2.416</td><td>1888110</td><td>1888109</td><td>HELP_J142433.629+353308.009</td></tr>\n",
+       "<tr><td>8</td><td>2000811</td><td>2000812</td><td>0.7871</td><td>2000812</td><td>2000811</td><td>HELP_J142433.635+354435.055</td></tr>\n",
+       "<tr><td>9</td><td>2029548</td><td>2029549</td><td>4.2342</td><td>2029549</td><td>2029548</td><td>HELP_J142433.641+354736.024</td></tr>\n",
        "</table><style>table.dataTable {clear: both; width: auto !important; margin: 0 !important;}\n",
        ".dataTables_info, .dataTables_length, .dataTables_filter, .dataTables_paginate{\n",
        "display: inline-block; margin-right: 1em; }\n",
@@ -449,19 +443,19 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table4559118288-425323').dataTable()\");\n",
+       "    console.log(\"$('#table4833520216-86896').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table4559118288-425323').dataTable({\n",
+       "    $('#table4833520216-86896').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
        "        pagingType: \"full_numbers\",\n",
-       "        columnDefs: [{targets: [0, 1, 2, 3], type: \"optionalnum\"}]\n",
+       "        columnDefs: [{targets: [0, 1, 2, 3, 4, 5], type: \"optionalnum\"}]\n",
        "    });\n",
        "});\n",
        "</script>\n"
@@ -493,8 +487,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_cat.write('./data/Bootes_opt_spitzer_merged_vac_opt3as_irac4as_all_public_with_help_id.fits', overwrite=True)"
+    "new_cat.write('./data/Bootes_opt_spitzer_merged_vac_opt3as_irac4as_all_public_with_help_id_20200923.fits', overwrite=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -514,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
