Testing new id associations

--- a/dmu32/dmu32_Bootes/Bootes_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Bootes/Bootes_catalogue_merging.ipynb
@@ -81,7 +81,7 @@
    "outputs": [],
    "source": [
     "# Masterlist DR1 date\n",
-    "SUFFIX = '20190701'"
+    "SUFFIX = '20190701' + '_id_test_20200923'"
    ]
   },
   {
@@ -230,8 +230,9 @@
    "source": [
     "# Photo-z\n",
     "\n",
+    "#New photoz ids after attempted error fix in help_id association\n",
     "photoz = Table.read(\"../../dmu24/dmu24_Bootes/data/\"\n",
-    "                    +\"Bootes_opt_spitzer_merged_vac_opt3as_irac4as_all_public_with_help_id.fits\")\n",
+    "                    +\"Bootes_opt_spitzer_merged_vac_opt3as_irac4as_all_public_with_help_id_20200923.fits\")\n",
     "photoz.meta = None\n",
     "\n",
     "photoz = photoz['help_id', 'z1_median']\n",
@@ -686,7 +687,7 @@
     "if MAKE_FINAL:\n",
     "\n",
     "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
-    "    merged_table[columns].write(\"data/Bootes.fits\", overwrite=True)"
+    "    merged_table[columns].write(\"data/Bootes{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   }
  ],
@@ -707,7 +708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
