Bootes missasociation bug fix
I was joining i selected Brown ids against irac selected ids. I think this is now fixed but we still might want to redo Bootes

--- a/dmu32/dmu32_Bootes/Bootes_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Bootes/Bootes_catalogue_merging.ipynb
@@ -687,7 +687,7 @@
     "if MAKE_FINAL:\n",
     "\n",
     "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
-    "    merged_table[columns].write(\"data/Bootes{}.fits\".format(SUFFIX), overwrite=True)"
+    "    merged_table[columns].write(\"data/Bootes_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   }
  ],
