--- a/dmu32/dmu32_Bootes/Bootes_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Bootes/Bootes_catalogue_merging.ipynb
@@ -25,7 +25,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2019-07-10 17:52:24.554060\n"
+      "2020-09-23 19:30:08.529266\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
    "outputs": [],
    "source": [
     "# Masterlist DR1 date\n",
-    "SUFFIX = '20190701' + '_id_test_20200923'"
+    "SUFFIX = '20190701' #+ '_id_test_20200923'"
    ]
   },
   {
@@ -409,7 +409,7 @@
      "output_type": "stream",
      "text": [
       "set()\n",
-      "{'flag_irac_i2_ap', 'flag_irac_i3_ap', 'flag_irac_i1_ap', 'flag_irac_i4_ap'}\n",
+      "{'flag_irac_i2_ap', 'flag_irac_i4_ap', 'flag_irac_i1_ap', 'flag_irac_i3_ap'}\n",
       "Column f_ap_lbc_u has missing data\n",
       "Column ferr_ap_lbc_u has missing data\n",
       "Column m_ap_lbc_u has missing data\n",
@@ -625,7 +625,7 @@
      "text": [
       "False\n",
       "set()\n",
-      "{'flag_irac_i2_ap', 'flag_irac_i3_ap', 'flag_irac_i1_ap', 'flag_irac_i4_ap'}\n"
+      "{'flag_irac_i2_ap', 'flag_irac_i4_ap', 'flag_irac_i1_ap', 'flag_irac_i3_ap'}\n"
      ]
     }
    ],
@@ -687,7 +687,7 @@
     "if MAKE_FINAL:\n",
     "\n",
     "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
-    "    merged_table[columns].write(\"data/Bootes{}.fits\".format(SUFFIX), overwrite=True)"
+    "    merged_table[columns].write(\"data/Bootes_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   }
  ],
@@ -708,7 +708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
